--- a/public/GranularConfig/index.html
+++ b/public/GranularConfig/index.html
@@ -764,14 +764,14 @@ $ux_research = [
 
 <section>
   <h1>
-    "dev,remote,uxtesting"
+    "dev,remote,ux_research"
   </h1>
 
   <pre class="danackCode spaceTop embiggen" data-trim><code class="php">
 
   $settings = array_merge([], $dev);
   $settings = array_merge($settings, $remote);
-  $settings = array_merge($settings, $uxtesting);
+  $settings = array_merge($settings, $ux_research);
 
   return $settings;
 
