Fixed missing comma.

--- a/public/GranularConfig/index.html
+++ b/public/GranularConfig/index.html
@@ -390,7 +390,7 @@ $ci = [
     'logging.targets' => ['null'], // changed
     'cdn.service' => false,
     'payment.gateway' => 'standard',
-    'user_data.service' => 'spoof'
+    'user_data.service' => 'spoof',
     'repository_type' => 'in_memory', // changed
 ];
 </code>
