Changing nginx config to work.

--- a/public/ReactJsIntro/index.html
+++ b/public/ReactJsIntro/index.html
@@ -336,7 +336,9 @@
 
 <!-- *************************** -->
 <section>
-    <h1>Enter ReactJS</h1>
+    <h1>Cutting the problem in two</h1>
+
+    <p style="padding-bottom: 150px"></p>
 
 <table>
   <thead>
@@ -363,6 +365,8 @@
     </tr>
   </tbody>
 </table>
+
+    <p style="padding-bottom: 200px"></p>
 
 
   <aside class="notes">
@@ -600,11 +604,11 @@ function ListItem(props) {
 </code>
 </pre>
 
-                <aside class="notes">
-                    <ul>
-                    </ul>
-                </aside>
-            </section>
+    <aside class="notes">
+        <ul>
+        </ul>
+    </aside>
+</section>
 
 <!-- *************************** -->
 <section>
@@ -680,8 +684,6 @@ ReactDOM.render(
 </section>
 
 
-
-
 <!-- *************************** -->
 <section>
     <h1>React not just in the browser</h1>
@@ -697,20 +699,47 @@ ReactDOM.render(
     </aside>
 </section>
 
-
+<!-- *************************** -->
 <section style="width: 100%; text-align: center !important;">
   <img src="/images/ReactUsers.png" width="75%" />
 </section>
 
+<!-- *************************** -->
+<section>
+    <h1>Downsides</h1>
 
+    <ul>
+        <li>
+            Doesn't play well with others
+        </li>
+        <li>
+            NPM + Javascript ecosystem makes people want to become farmers
+        </li>
+        <li>
+            Will it scale?
+        </li>
+    </ul>
+
+    <aside class="notes">
+    </aside>
+</section>
 
 <!-- *************************** -->
 <section>
     <h1 class="embiggen finale">Fin</h1>
 <ul>
   <li>Questions?</li>
+    <li><a href="http://docs.basereality.com/ReactJsIntro/">docs.basereality.com/ReactJsIntro/</a></li>
+    <li><a href="http://docs.basereality.com/">docs.basereality.com</a></li>
+    <li><a href="/ReactJsIntro/jsx/clock.jsx">clock.jsx</a></li>
+    <li><a href="/ReactJsIntro/jsx/simple_form.jsx">simple_form.jsx</a></li>
+    <li><a href="/ReactJsIntro/jsx/weather_forecast.jsx">weather_forecast.jsx</a></li>
+
 </ul>
 </section>
+
+
+
 
 
 
