--- a/public/ReactJsIntro/index.html
+++ b/public/ReactJsIntro/index.html
@@ -755,18 +755,14 @@ ReactDOM.render(
 <section>
     <h1 class="embiggen finale">Fin</h1>
 <ul>
-  <li>Questions?</li>
+  <li>Questions? Twitter @MrDanack</li>
     <li><a href="http://docs.basereality.com/ReactJsIntro/">docs.basereality.com/ReactJsIntro/</a></li>
     <li><a href="http://docs.basereality.com/">docs.basereality.com</a></li>
     <li><a href="/ReactJsIntro/jsx/clock.jsx">clock.jsx</a></li>
     <li><a href="/ReactJsIntro/jsx/simple_form.jsx">simple_form.jsx</a></li>
     <li><a href="/ReactJsIntro/jsx/weather_forecast.jsx">weather_forecast.jsx</a></li>
-
 </ul>
 </section>
-
-
-
 
 
 
